--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_gravity="center|center_horizontal|center_vertical"
         android:foregroundGravity="center"
         android:text=""
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
     <TextView
@@ -48,7 +48,7 @@
         android:layout_gravity="center|center_horizontal|center_vertical"
         android:foregroundGravity="center"
         android:text=""
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="10sp" />
 
     <LinearLayout
